// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Div action test should create block with action with hover type background-color 1`] = `
{
  "type": "text",
  "action": {
    "log_id": "id",
    "url": "ya.ru",
    "hover": {
      "type": "background-color",
      "color": "red"
    }
  },
  "text": "bla"
}
`;

exports[`Div action test should create block with payload action 1`] = `
{
  "type": "text",
  "action": {
    "log_id": "id",
    "url": "ya.ru",
    "payload": {
      "a": 1,
      "b": 2
    }
  },
  "text": "bla"
}
`;

exports[`Div action test should create card with templated action properties 1`] = `
{
  "templates": {
    "card": {
      "type": "text",
      "action": {
        "log_id": "id",
        "hover": {
          "type": "background-color",
          "$color": "bgHoverColor"
        },
        "$url": "actionUrl"
      },
      "text": "bla"
    }
  },
  "card": {
    "log_id": "id",
    "states": [
      {
        "state_id": 1,
        "div": {
          "type": "card",
          "bgHoverColor": "red",
          "actionUrl": "ya.ru"
        }
      }
    ]
  }
}
`;

exports[`Div action test should create template with action nested properties 1`] = `
{
  "title_text": {
    "type": "text",
    "action": {
      "log_id": "id",
      "url": "ya.ru",
      "hover": {
        "type": "background-color",
        "$color": "bgHoverColor"
      }
    },
    "text": "bla"
  }
}
`;

exports[`Div action test should create text block with action 1`] = `
{
  "type": "text",
  "action": {
    "log_id": "id",
    "url": "ya.ru"
  },
  "text": "bla"
}
`;
